Fixed spacing issue

--- a/scss/components/_grid.scss
+++ b/scss/components/_grid.scss
@@ -1,10 +1,10 @@
  
 .container {
-    width: 1000px;
     display:grid;
-    grid-gap: 20px;
-    grid-template-columns: repeat( auto-fill, minmax(230px, 1fr) );
-    grid-auto-flow: row;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    max-width: 1000px;
+    grid-gap: 30px;
+    margin: 0 auto;
 
     justify-items: center;   
 }
