--- a/scss/components/_images.scss
+++ b/scss/components/_images.scss
@@ -1,7 +1,5 @@
-.container > img {
-    display: block;
-    width:200px;
-    height:200px;
-    object-fit: cover;
-  }
+img{
+  display: block;
+  width: 100%;
+}
 
