--- a/scss/components/_search.scss
+++ b/scss/components/_search.scss
@@ -2,7 +2,7 @@
     font-size: 12px;
     margin: 30px auto;
     display: block;
-    width: 605px;
+    width: 45%;
     height: 40px;
     border: solid rgb(235, 229, 229);
     border-radius: 5px;
