--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,13 +1,2 @@
 @import "components/grid", "components/images", "components/search" ;
 
-html, body {
-    width: 100%;
-    height: 100%;
-    margin: 0px;
-    padding: 0px;
-    overflow-x: hidden;
-}
-main {
-    display: flex;
-    justify-content: center;
-}
